--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&family=Rubik+Mono+One&family=VT323&display=swap"
         rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Jersey+10&family=Jersey+15&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/styles/styles.css">
 </head>
 
@@ -24,32 +25,28 @@
             <source src="assets/videos/fortune.mp4" type="video/mp4" />
             <source src="assets/videos/webm/fortune.webm" type="video/webm; codecs='vp8, vorbis'" />
         </video>
-        <div id="carouselContainer" class="carousel-container"></div>
+        <img id="bgImg" src="assets/images/flowr-scan.jpeg" alt="Fallback Image" />
     </section>
 
     <div class="marquee">
         <div class="marquee-inner">
             <span class="marquee-text">&nbsp; Howdy &nbsp; Welcome to the candy factory &nbsp; Take a look around &nbsp;
                 Many visuals to
-                satisfy the sweet-tooth &nbsp; Let your brain dive in and relax &nbsp; Hope that you are moving
-                moderately with your vices &nbsp;
+                satisfy the sweet-tooth &nbsp; Let your brain dive in and relax &nbsp;
             </span>
             <span class="marquee-text">&nbsp; Howdy &nbsp; Welcome to the candy factory &nbsp; Take a look around &nbsp;
                 Many visuals to
-                satisfy the sweet-tooth &nbsp; Let your brain dive in and relax &nbsp; Hope that you are moving
-                moderately with your vices &nbsp;
+                satisfy the sweet-tooth &nbsp; Let your brain dive in and relax &nbsp;
             </span>
         </div>
         <div class="marquee-inner" aria-hidden="true">
             <span class="marquee-text">&nbsp; Howdy &nbsp; Welcome to the candy factory &nbsp; Take a look around &nbsp;
                 Many visuals to
-                satisfy the sweet-tooth &nbsp; Let your brain dive in and relax &nbsp; Hope that you are moving
-                moderately with your vices &nbsp;
+                satisfy the sweet-tooth &nbsp; Let your brain dive in and relax &nbsp;
             </span>
             <span class="marquee-text">&nbsp; Howdy &nbsp; Welcome to the candy factory &nbsp; Take a look around &nbsp;
                 Many visuals to
-                satisfy the sweet-tooth &nbsp; Let your brain dive in and relax &nbsp; Hope that you are moving
-                moderately with your vices &nbsp;
+                satisfy the sweet-tooth &nbsp; Let your brain dive in and relax &nbsp;
             </span>
         </div>
     </div>
@@ -58,20 +55,14 @@
 
         <section class="title-banner">
             <div class="title" id="spanish-header">
-                <h1>
-                    <img src="assets/images/icons/planet-96-white.png" alt=""> WILFREDO <br> HERRERA
-                    <img src="assets/images/icons/planet-96-white.png" alt="">
+                <h1>WILFREDO HERRERA visual artist portfolio
                 </h1>
-                <h4><em>visual artist</em></h4>
+                <!-- <h4><em>visual artist</em></h4> -->
                 <!-- <h2><a href="#" onclick="scrollToAbout('about')"><img src="assets/images/icons/about-96.png"
                             alt=""></a></h2> -->
             </div>
 
         </section>
-
-        <!-- <a href="index.html#about" style="margin: 0 auto;">
-            <img src="assets/images/icons/about-black.png" alt="">
-        </a> -->
     </div>
 
 
@@ -417,7 +408,7 @@
                 </section>
 
                 <section class="contact-card">
-                    <div> contacto:
+                    <div> contact:
                         <a href="mailto:fredo25w@gmail.com" target="_blank" class="link">e-mail</a>
                         <a href="https://www.instagram.com/bebofrik/" target="_blank" class="link">instagram</a>
                         <a href="https://www.youtube.com/channel/UC5oNJt-0mgmcMfv42GhqxZA" target="_blank"
