--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                     <div class="about-info">
                         <div id="about-me-sp" data-lang="spanish">
                             <div>
-                                <h2 class="about-header">About the artist</h2>
+                                <h2 class="c-head-text">ABOUT</h2>
                                 <!-- <h3><a href="#">go <br> back</a></h3> -->
                             </div>
                             <p>
