added poster to video elements

--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
 
 <body>
     <section class="bg-img">
-        <video id="bgVideo" autoplay muted playsinline loop>
-            <source src="assets/videos/fortune.mp4" type="video/mp4" />
-            <source src="assets/videos/webm/fortune.webm" type="video/webm; codecs='vp8, vorbis'" />
+        <video id="bgVideo" autoplay muted playsinline loop disablepictureinpicture
+            poster="assets/images/flowr-scan.jpeg">
+            <source src="assets/videos/bg-video-compressed.mp4" type="video/mp4" />
         </video>
-        <img id="bgImg" src="assets/images/flowr-scan.jpeg" alt="Fallback Image" />
     </section>
 
     <div class="marquee">
@@ -57,7 +56,7 @@
             <div class="bio-header">
                 <section class="title-banner">
                     <div class="title">
-                        <h1>fred0.net
+                        <h1>fred0.net &#9787;
                         </h1>
                     </div>
                 </section>
@@ -75,7 +74,7 @@
                         <p>
                             visual artist /
                             <br>
-                            web enthusiast
+                            web dev enthusiast
                             <br>
                             <br>
                             33 (he/him)
@@ -97,14 +96,18 @@
                 </div>
                 <div class="about-desc">
                     <p>
-                        WILFREDO HERRERA comes from the vibrant and sunny island of Puerto Rico. Raised on Cartoon
-                        Network, Pokémon and MySpace, Fredo grew to love all things off-kilter. He traveled to the
-                        distant land of Rhode Island to study his
-                        favorite subject: film. There, he discovered a treasure trove of knowledge shared by
-                        others also obsessed with the idea of making movies. Fredo has worked in production in
-                        various roles, including as cinematographer for the short film <a class="link"
+                        WILFREDO HERRERA originates from the vibrant island of Puerto Rico from Cuban immigrants. As a
+                        person who enjoys learning new technologies, Fredo has delved into different mediums (like
+                        filmmaking, web development, and visual arts), exploring the landscape for new skills to master.
+                        He went to university in the U.S. to study his favorite subject- movies, and got a Bachelor's
+                        Degree in Film. After years at a corporate job, he moved states to pursue a passion in the arts.
+                        <br> <span class="arrow-down">&#9759;</span>
+                        <br>
+                        Fredo has worked on production in
+                        various roles, including as cinematographer for the short films <a class="link"
                             href="https://youtu.be/VAabx5ttHa4" target=”_blank” rel="noopener noreferrer">DYNAMITE
-                            ABRAHAM: A DOCUMENTARY</a> shot on Super 8mm, as
+                            ABRAHAM: A DOCUMENTARY</a>, shot on Super 8mm and the upcoming <span
+                            style="text-decoration: underline;">SEXY BITCH</span>, shot digitally in N.Y.; as
                         well
                         as editor and director of the music video for the <a class="link"
                             href="https://youtu.be/wNJihWmU-iE" target=”_blank” rel="noopener noreferrer">single
@@ -113,8 +116,9 @@
                         <br>
                         <br>
 
-                        Fredo enjoys discovering music and creates mixes under the pseudonym <a class="link"
-                            href="https://www.mixcloud.com/fr_radio/" target="_blank"><em>fredonaut</em></a>
+                        Fredo enjoys vinyl sounds and discovering music. He creates mixes under the pseudonym <a
+                            class="link" href="https://www.mixcloud.com/fr_radio/"
+                            target="_blank"><em>fredonaut</em></a> -
 
                         <br>
                         <br>
@@ -129,20 +133,20 @@
                         <br>
                         <br>
 
-                        He currently lives in New York City, focusing on producing short films, digital/analog
+                        Fredo currently resides in New York, focusing on producing short films, digital/analog
                         video manipulation, generative art, and web development. He welcomes all artistic
-                        collaborations.
+                        collaborations. &#9787;
 
                         <br>
                         <br>
-                        His resume can be found <a href="assets/resume/fredo-resume-v022624.pdf" target="_blank"
-                            class="link" style="color: red;">here</a>
+                        CV can be found <a href="assets/resume/fredo-resume-v042424.pdf" target="_blank" class="link"
+                            style="color: red;">here</a>
                     </p>
                 </div>
             </div>
         </div>
 
-        <div class="bio-header-container">
+        <div class="social-container">
             <div class="border-wrapper-2"></div>
             <div class="social-header">
                 <section class="title-banner">
@@ -190,7 +194,7 @@
                 <section class="prj-grid">
                     <section class="prj-item">
                         <section class="prj-img">
-                            <video class="video" preload="auto" muted playsinline loop>
+                            <video class="video" preload="auto" muted playsinline loop poster="assets/images/video-elemnt-poster/purple-treees-img.png">
                                 <source src="assets/videos/purple-treees.mp4" type="video/mp4" />
                                 <source src="assets/videos/webm/purple-treees.webm" type="video/webm" />
                             </video>
@@ -204,7 +208,7 @@
 
                     <section class="prj-item">
                         <section class="prj-img">
-                            <video class="video" muted playsinline loop>
+                            <video class="video" muted playsinline loop poster="assets/images/video-elemnt-poster/flyman-img.png">
                                 <source src="assets/videos/flyman.mp4" type="video/mp4" />
                                 <source src="assets/videos/webm/flyman.webm" type="video/webm" />
                             </video>
@@ -218,7 +222,7 @@
 
                     <section class="prj-item">
                         <section class="prj-img">
-                            <video class="video" muted playsinline loop>
+                            <video class="video" muted playsinline loop poster="assets/images/video-elemnt-poster/little-dreamr-img.png">
                                 <source src="assets/videos/little-dreamr.mp4" type="video/mp4" />
                                 <source src="assets/videos/webm/little-dreamr.webm" type="video/webm" />
                             </video>
@@ -238,7 +242,7 @@
 
                     <section class="prj-item">
                         <section class="prj-img">
-                            <video class="video" muted playsinline loop>
+                            <video class="video" muted playsinline loop poster="assets/images/video-elemnt-poster/space-man-img.png">
                                 <source src="assets/videos/space-man.mp4" type="video/mp4" />
                                 <source src="assets/videos/webm/space-man.webm" type="video/webm" />
                             </video>
@@ -259,7 +263,7 @@
 
                     <section class="prj-item">
                         <section class="prj-img">
-                            <video class="video" muted playsinline loop>
+                            <video class="video" muted playsinline loop poster="assets/images/video-elemnt-poster/el-santo-img.png">
                                 <source src="assets/videos/el-santo_1.mp4" type="video/mp4" />
                                 <source src="assets/videos/webm/el-santo_1.webm" type="video/webm" />
                             </video>
@@ -280,7 +284,7 @@
 
                     <section class="prj-item">
                         <section class="prj-img">
-                            <video class="video" muted playsinline loop>
+                            <video class="video" muted playsinline loop poster="assets/images/video-elemnt-poster/wavybaby-img.png">
                                 <source src="assets/videos/wavyboxy.mp4" type="video/mp4" />
                                 <source src="assets/videos/webm/wavyboxy.webm" type="video/webm" />
                             </video>
@@ -296,7 +300,7 @@
 
                     <section class="prj-item">
                         <section class="prj-img">
-                            <video class="video" muted playsinline loop>
+                            <video class="video" muted playsinline loop poster="assets/images/video-elemnt-poster/frosty-img.png">
                                 <source src="assets/videos/frosty.mp4" type="video/mp4" />
                                 <source src="assets/videos/webm/frosty.webm" type="video/webm" />
                             </video>
@@ -314,7 +318,7 @@
 
                     <section class="prj-item">
                         <section class="prj-img">
-                            <video class="video" muted playsinline loop>
+                            <video class="video" muted playsinline loop poster="assets/images/video-elemnt-poster/bloom-img.png">
                                 <source src="assets/videos/bloom.mp4" type="video/mp4" />
                                 <source src="assets/videos/webm/bloom.webm" type="video/webm" />
                             </video>
@@ -328,7 +332,7 @@
 
                     <section class="prj-item">
                         <section class="prj-img">
-                            <video class="video" muted playsinline loop>
+                            <video class="video" muted playsinline loop poster="assets/images/video-elemnt-poster/colins-img.png">
                                 <source src="assets/videos/colins.mp4" type="video/mp4" />
                                 <source src="assets/videos/webm/colins.webm" type="video/webm" />
                             </video>
@@ -342,7 +346,7 @@
 
                     <section class="prj-item">
                         <section class="prj-img">
-                            <video class="video" muted playsinline loop>
+                            <video class="video" muted playsinline loop poster="assets/images/video-elemnt-poster/black-rvr-img.png">
                                 <source src="assets/videos/black-rivr.mp4" type="video/mp4" />
                                 <source src="assets/videos/webm/black-rivr.webm" type="video/webm" />
                             </video>
@@ -356,7 +360,7 @@
 
                     <section class="prj-item">
                         <section class="prj-img">
-                            <video class="video" muted playsinline loop>
+                            <video class="video" muted playsinline loop poster="assets/images/video-elemnt-poster/rainbow-road-img.png">
                                 <source src="assets/videos/rainbow-road.mp4" type="video/mp4" />
                                 <source src="assets/videos/webm/rainbow-road.webm" type="video/webm" />
                             </video>
@@ -370,7 +374,7 @@
 
                     <section class="prj-item">
                         <section class="prj-img">
-                            <video class="video" muted playsinline loop>
+                            <video class="video" muted playsinline loop poster="assets/images/video-elemnt-poster/clementines-img.png">
                                 <source src="assets/videos/clementines.mp4" type="video/mp4" />
                                 <source src="assets/videos/webm/clementines.webm" type="video/webm" />
                             </video>
@@ -384,7 +388,7 @@
 
                     <section class="prj-item">
                         <section class="prj-img">
-                            <video class="video" muted playsinline loop>
+                            <video class="video" muted playsinline loop poster="assets/images/video-elemnt-poster/gaming-img.png">
                                 <source src="assets/videos/gaming.mp4" type="video/mp4" />
                                 <source src="assets/videos/webm/gaming.webm" type="video/webm" />
                             </video>
@@ -398,7 +402,7 @@
 
                     <section class="prj-item">
                         <section class="prj-img">
-                            <video class="video" muted playsinline loop>
+                            <video class="video" muted playsinline loop poster="assets/images/video-elemnt-poster/butterfly-img.png">
                                 <source src="assets/videos/butterfly.mp4" type="video/mp4" />
                                 <source src="assets/videos/webm/butterfly.webm" type="video/webm" />
                             </video>
@@ -412,7 +416,7 @@
 
                     <section class="prj-item">
                         <section class="prj-img">
-                            <video class="video" muted playsinline loop>
+                            <video class="video" muted playsinline loop poster="assets/images/video-elemnt-poster/spirals-img.png">
                                 <source src="assets/videos/spiral-wv.mp4" type="video/mp4" />
                                 <source src="assets/videos/webm/spiral-wv.webm" type="video/webm" />
                             </video>
@@ -426,7 +430,7 @@
 
                     <section class="prj-item">
                         <section class="prj-img">
-                            <video class="video" muted playsinline loop>
+                            <video class="video" muted playsinline loop poster="assets/images/video-elemnt-poster/glitch-img.png">
                                 <source src="assets/videos/glitchy.mp4" type="video/mp4" />
                                 <source src="assets/videos/webm/glitchy.webm" type="video/webm" />
                             </video>
@@ -454,7 +458,8 @@
                 <section class="interests-info-wrapper">
                     <div>
                         <h4>Music:</h4>
-                        <p>The Night Chancers &lpar;2020&rpar; by Baxter Dury, The Awakening &lpar;1970&rpar; by Ahmad Jamal Trio, Cupid Deluxe &lpar;2013&rpar; by Blood Orange,
+                        <p>The Night Chancers &lpar;2020&rpar; by Baxter Dury, The Awakening &lpar;1970&rpar; by Ahmad
+                            Jamal Trio, Cupid Deluxe &lpar;2013&rpar; by Blood Orange,
                             Erotic Probiotic 2 &lpar;2023&rpar; by Nourished by Time,
                             Crying &lpar;1961&rpar; by Roy Orbison,
                             Band on the Run &lpar;1973&rpar; by Wings... </p>
