--- a/index.html
+++ b/index.html
@@ -27,25 +27,25 @@
         </video>
     </section>
 
-    <div class="marquee">
+    <div class="marquee" lang="en">
         <div class="marquee-inner">
             <span class="marquee-text">&nbsp; Howdy &nbsp; Welcome to the candy factory &nbsp; Take a look around &nbsp;
                 Many visuals to
-                satisfy the sweet-tooth &nbsp; Let your brain dive in and relax &nbsp;
+                satisfy the sweet-tooth &nbsp; Let your brain tune in &nbsp;
             </span>
             <span class="marquee-text">&nbsp; Howdy &nbsp; Welcome to the candy factory &nbsp; Take a look around &nbsp;
                 Many visuals to
-                satisfy the sweet-tooth &nbsp; Let your brain dive in and relax &nbsp;
+                satisfy the sweet-tooth &nbsp; Let your brain tune in &nbsp;
             </span>
         </div>
         <div class="marquee-inner" aria-hidden="true">
             <span class="marquee-text">&nbsp; Howdy &nbsp; Welcome to the candy factory &nbsp; Take a look around &nbsp;
                 Many visuals to
-                satisfy the sweet-tooth &nbsp; Let your brain dive in and relax &nbsp;
+                satisfy the sweet-tooth &nbsp; Let your brain tune in &nbsp;
             </span>
             <span class="marquee-text">&nbsp; Howdy &nbsp; Welcome to the candy factory &nbsp; Take a look around &nbsp;
                 Many visuals to
-                satisfy the sweet-tooth &nbsp; Let your brain dive in and relax &nbsp;
+                satisfy the sweet-tooth &nbsp; Let your brain tune in &nbsp;
             </span>
         </div>
     </div>
