--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
                         person who enjoys learning new technologies, Fredo has delved into different mediums (like
                         filmmaking, web development, and visual arts), exploring the landscape for new skills to master.
                         He went to university in the U.S. to study his favorite subject- movies, and got a Bachelor's
-                        Degree in Film. After years at a corporate job, he moved states to pursue a passion in the arts.
+                        Degree in Film.
                         <br> <span class="arrow-down">&#9759;</span>
                         <br>
-                        Fredo has worked on production in
+                        Fredo works in productions in
                         various roles, including as cinematographer for the short films <a class="link"
                             href="https://youtu.be/VAabx5ttHa4" target=”_blank” rel="noopener noreferrer">DYNAMITE
                             ABRAHAM: A DOCUMENTARY</a>, shot on Super 8mm and the upcoming <span
@@ -111,12 +111,19 @@
                         well
                         as editor and director of the music video for the <a class="link"
                             href="https://youtu.be/wNJihWmU-iE" target=”_blank” rel="noopener noreferrer">single
-                            THUNDER</a> by the Boston band Pyramid Thieves.
+                            THUNDER</a> by the Boston band Pyramid Thieves. He also has experience as a gaffer and sound
+                        person.
 
                         <br>
                         <br>
 
-                        Fredo enjoys vinyl sounds and discovering music. He creates mixes under the pseudonym <a
+                        Fredo started exploring analog video mixers, the world wide web, and visual programming
+                        languages thanks to an intro to video signals class offered by the collective PhaseSpace (now
+                        Wavefield) based out of Bushwick, N.Y. He aims to create visual pieces that stimulate the brain in conjuction with curated music.
+                        <br>
+                        <br>
+
+                        Fredo enjoys vinyl feel and discovering music. He creates mixes under the pseudonym <a
                             class="link" href="https://www.mixcloud.com/fr_radio/"
                             target="_blank"><em>fredonaut</em></a> -
 
@@ -194,7 +201,8 @@
                 <section class="prj-grid">
                     <section class="prj-item">
                         <section class="prj-img">
-                            <video class="video" preload="auto" muted playsinline loop poster="assets/images/video-elemnt-poster/purple-treees-img.png">
+                            <video class="video" preload="auto" muted playsinline loop
+                                poster="assets/images/video-elemnt-poster/purple-treees-img.png">
                                 <source src="assets/videos/purple-treees.mp4" type="video/mp4" />
                                 <source src="assets/videos/webm/purple-treees.webm" type="video/webm" />
                             </video>
@@ -208,7 +216,8 @@
 
                     <section class="prj-item">
                         <section class="prj-img">
-                            <video class="video" muted playsinline loop poster="assets/images/video-elemnt-poster/flyman-img.png">
+                            <video class="video" muted playsinline loop
+                                poster="assets/images/video-elemnt-poster/flyman-img.png">
                                 <source src="assets/videos/flyman.mp4" type="video/mp4" />
                                 <source src="assets/videos/webm/flyman.webm" type="video/webm" />
                             </video>
@@ -222,7 +231,8 @@
 
                     <section class="prj-item">
                         <section class="prj-img">
-                            <video class="video" muted playsinline loop poster="assets/images/video-elemnt-poster/little-dreamr-img.png">
+                            <video class="video" muted playsinline loop
+                                poster="assets/images/video-elemnt-poster/little-dreamr-img.png">
                                 <source src="assets/videos/little-dreamr.mp4" type="video/mp4" />
                                 <source src="assets/videos/webm/little-dreamr.webm" type="video/webm" />
                             </video>
@@ -242,7 +252,8 @@
 
                     <section class="prj-item">
                         <section class="prj-img">
-                            <video class="video" muted playsinline loop poster="assets/images/video-elemnt-poster/space-man-img.png">
+                            <video class="video" muted playsinline loop
+                                poster="assets/images/video-elemnt-poster/space-man-img.png">
                                 <source src="assets/videos/space-man.mp4" type="video/mp4" />
                                 <source src="assets/videos/webm/space-man.webm" type="video/webm" />
                             </video>
@@ -263,7 +274,8 @@
 
                     <section class="prj-item">
                         <section class="prj-img">
-                            <video class="video" muted playsinline loop poster="assets/images/video-elemnt-poster/el-santo-img.png">
+                            <video class="video" muted playsinline loop
+                                poster="assets/images/video-elemnt-poster/el-santo-img.png">
                                 <source src="assets/videos/el-santo_1.mp4" type="video/mp4" />
                                 <source src="assets/videos/webm/el-santo_1.webm" type="video/webm" />
                             </video>
@@ -284,7 +296,8 @@
 
                     <section class="prj-item">
                         <section class="prj-img">
-                            <video class="video" muted playsinline loop poster="assets/images/video-elemnt-poster/wavybaby-img.png">
+                            <video class="video" muted playsinline loop
+                                poster="assets/images/video-elemnt-poster/wavybaby-img.png">
                                 <source src="assets/videos/wavyboxy.mp4" type="video/mp4" />
                                 <source src="assets/videos/webm/wavyboxy.webm" type="video/webm" />
                             </video>
@@ -300,7 +313,8 @@
 
                     <section class="prj-item">
                         <section class="prj-img">
-                            <video class="video" muted playsinline loop poster="assets/images/video-elemnt-poster/frosty-img.png">
+                            <video class="video" muted playsinline loop
+                                poster="assets/images/video-elemnt-poster/frosty-img.png">
                                 <source src="assets/videos/frosty.mp4" type="video/mp4" />
                                 <source src="assets/videos/webm/frosty.webm" type="video/webm" />
                             </video>
@@ -318,7 +332,8 @@
 
                     <section class="prj-item">
                         <section class="prj-img">
-                            <video class="video" muted playsinline loop poster="assets/images/video-elemnt-poster/bloom-img.png">
+                            <video class="video" muted playsinline loop
+                                poster="assets/images/video-elemnt-poster/bloom-img.png">
                                 <source src="assets/videos/bloom.mp4" type="video/mp4" />
                                 <source src="assets/videos/webm/bloom.webm" type="video/webm" />
                             </video>
@@ -332,7 +347,8 @@
 
                     <section class="prj-item">
                         <section class="prj-img">
-                            <video class="video" muted playsinline loop poster="assets/images/video-elemnt-poster/colins-img.png">
+                            <video class="video" muted playsinline loop
+                                poster="assets/images/video-elemnt-poster/colins-img.png">
                                 <source src="assets/videos/colins.mp4" type="video/mp4" />
                                 <source src="assets/videos/webm/colins.webm" type="video/webm" />
                             </video>
@@ -346,7 +362,8 @@
 
                     <section class="prj-item">
                         <section class="prj-img">
-                            <video class="video" muted playsinline loop poster="assets/images/video-elemnt-poster/black-rvr-img.png">
+                            <video class="video" muted playsinline loop
+                                poster="assets/images/video-elemnt-poster/black-rvr-img.png">
                                 <source src="assets/videos/black-rivr.mp4" type="video/mp4" />
                                 <source src="assets/videos/webm/black-rivr.webm" type="video/webm" />
                             </video>
@@ -360,7 +377,8 @@
 
                     <section class="prj-item">
                         <section class="prj-img">
-                            <video class="video" muted playsinline loop poster="assets/images/video-elemnt-poster/rainbow-road-img.png">
+                            <video class="video" muted playsinline loop
+                                poster="assets/images/video-elemnt-poster/rainbow-road-img.png">
                                 <source src="assets/videos/rainbow-road.mp4" type="video/mp4" />
                                 <source src="assets/videos/webm/rainbow-road.webm" type="video/webm" />
                             </video>
@@ -374,7 +392,8 @@
 
                     <section class="prj-item">
                         <section class="prj-img">
-                            <video class="video" muted playsinline loop poster="assets/images/video-elemnt-poster/clementines-img.png">
+                            <video class="video" muted playsinline loop
+                                poster="assets/images/video-elemnt-poster/clementines-img.png">
                                 <source src="assets/videos/clementines.mp4" type="video/mp4" />
                                 <source src="assets/videos/webm/clementines.webm" type="video/webm" />
                             </video>
@@ -388,7 +407,8 @@
 
                     <section class="prj-item">
                         <section class="prj-img">
-                            <video class="video" muted playsinline loop poster="assets/images/video-elemnt-poster/gaming-img.png">
+                            <video class="video" muted playsinline loop
+                                poster="assets/images/video-elemnt-poster/gaming-img.png">
                                 <source src="assets/videos/gaming.mp4" type="video/mp4" />
                                 <source src="assets/videos/webm/gaming.webm" type="video/webm" />
                             </video>
@@ -402,7 +422,8 @@
 
                     <section class="prj-item">
                         <section class="prj-img">
-                            <video class="video" muted playsinline loop poster="assets/images/video-elemnt-poster/butterfly-img.png">
+                            <video class="video" muted playsinline loop
+                                poster="assets/images/video-elemnt-poster/butterfly-img.png">
                                 <source src="assets/videos/butterfly.mp4" type="video/mp4" />
                                 <source src="assets/videos/webm/butterfly.webm" type="video/webm" />
                             </video>
@@ -416,7 +437,8 @@
 
                     <section class="prj-item">
                         <section class="prj-img">
-                            <video class="video" muted playsinline loop poster="assets/images/video-elemnt-poster/spirals-img.png">
+                            <video class="video" muted playsinline loop
+                                poster="assets/images/video-elemnt-poster/spirals-img.png">
                                 <source src="assets/videos/spiral-wv.mp4" type="video/mp4" />
                                 <source src="assets/videos/webm/spiral-wv.webm" type="video/webm" />
                             </video>
@@ -430,7 +452,8 @@
 
                     <section class="prj-item">
                         <section class="prj-img">
-                            <video class="video" muted playsinline loop poster="assets/images/video-elemnt-poster/glitch-img.png">
+                            <video class="video" muted playsinline loop
+                                poster="assets/images/video-elemnt-poster/glitch-img.png">
                                 <source src="assets/videos/glitchy.mp4" type="video/mp4" />
                                 <source src="assets/videos/webm/glitchy.webm" type="video/webm" />
                             </video>
