--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
     <section class="bg-img">
         <video id="bgVideo" autoplay muted playsinline loop disablepictureinpicture
-            poster="assets/images/flowr-scan.jpeg">
+            poster="assets/images/scanned-img/flower-1-inverted.png">
             <source src="assets/videos/bg-video-compressed.mp4" type="video/mp4" />
         </video>
     </section>
@@ -119,7 +119,8 @@
 
                         Fredo started exploring analog video mixers, the world wide web, and visual programming
                         languages thanks to an intro to video signals class offered by the collective PhaseSpace (now
-                        Wavefield) based out of Bushwick, N.Y. He aims to create visual pieces that stimulate the brain in conjuction with curated music.
+                        Wavefield) based out of Bushwick, N.Y. He aims to create visual pieces that stimulate the brain
+                        in conjuction with curated music.
                         <br>
                         <br>
 
@@ -527,7 +528,9 @@
     </div>
 
     <footer>
-        <h4>© 2024 WILFREDO HERRERA</h4>
+        <p class="foot-text">
+            &copy; 2024 WILFREDO HERRERA <br> <br> &#9886; This site is always evolving &#9887;
+        </p>
     </footer>
 
     <script src="scripts/script.js"></script>
