--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
 </head>
 
 <body>
-    <section class="bg-img">
-        <video id="bgVideo" autoplay muted playsinline loop disablepictureinpicture
+    <section class="bg-container">
+        <video class="bg-video" id="bgVideo" autoplay muted playsinline loop disablepictureinpicture
             poster="assets/images/scanned-img/flower-1-inverted.png">
             <source src="assets/videos/bg-video-compressed.mp4" type="video/mp4" />
         </video>
+        <img class="hidden bg-img" src="assets/images/scanned-img/flower-1-inverted.png" alt="">
     </section>
 
     <div class="marquee" lang="en">
